--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <input type="text" class="keyword-input" placeholder="Enter keyword...">
         </div>
         <div class="column">
-          <select class="dropdown-menu">
+          <select class="category-dropdown-menu">
             <option value="option0">Select a category...</option>
             <option value="option1">Option 1</option>
             <option value="option2">Option 2</option>
