--- a/widget-code/index.html
+++ b/widget-code/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squarespace Custom Widget</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Variables for Static Files Environment Variables -->
+    <script src="./env.js"></script>
+
+    <!-- Javascript file -->
     <script src="./script.js"></script>
 </head>
 
